--- a/theme_less/_global.less
+++ b/theme_less/_global.less
@@ -8,7 +8,7 @@ body{background-color: @backgroundColor; .transition( padding 250ms ease-in); he
 	position: relative;
 }
 
-img{
+img, iframe{
 	max-width: 100%;
 	height: auto;
 }
