--- a/style.less
+++ b/style.less
@@ -2,12 +2,12 @@
 Theme Name: Tography Lite
 Theme URI: http://themes.quemalabs.com/tography-lite/
 Description: A beautiful and minimalistic photography WordPress theme. The perfect choice for photographers who want a simple and attractive site. If you want more features you should check the full version in http://bit.ly/tography
-Version: 1.0.3
+Version: 1.0.5
 Author: Quema Labs
 Author URI: http://www.quemalabs.com/
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: featured-images, responsive-layout, two-columns, threaded-comments, custom-menu, light, right-sidebar, sticky-post, translation-ready
+Tags: featured-images, responsive-layout, two-columns, threaded-comments, custom-menu, light, right-sidebar, sticky-post, translation-ready, white, photoblogging
 Text Domain: tography_lite
 */
 /*
