--- a/theme_less/_wp-default.less
+++ b/theme_less/_wp-default.less
@@ -91,7 +91,6 @@ a img.aligncenter {
     border-top: 0;
 }
 
-
 .gallery .gallery-caption {
     color: #888;
     font-size: 12px;
@@ -200,9 +199,8 @@ a img.aligncenter {
 }
 
 .sticky{
-    border-top: 5px solid @gray-light2;
-    border-bottom: 5px solid @gray-light2;
-    padding: 30px 0;
+    border: 5px solid @gray-light2;
+    padding: 30px;
 }
 
 /*------------------------------------------------------------
