--- a/style.less
+++ b/style.less
@@ -1,8 +1,8 @@
 /*
 Theme Name: Tography Lite
-Theme URI: http://themes.quemalabs.com/tography-lite/
+Theme URI: http://www.quemalabs.com/portfolio/tography-lite/
 Description: A beautiful and minimalistic photography WordPress theme. The perfect choice for photographers who want a simple and attractive site. If you want more features you should check the full version in http://bit.ly/tography
-Version: 1.0.5
+Version: 1.0.8
 Author: Quema Labs
 Author URI: http://www.quemalabs.com/
 License: GNU General Public License v2 or later
