--- a/theme_less/_header.less
+++ b/theme_less/_header.less
@@ -286,6 +286,7 @@ Nav Menu
     color: @contrastColor;
     padding-left: 1.875rem;
     padding-right: 1.875rem;
+    background-color: transparent;
 }
 #jqueryslidemenu ul.nav > li > a:hover{
 	background-color: rgba(255,255,255,0.3);
