--- a/rtl.css
+++ b/rtl.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Tography Lite
 Theme URI: http://themes.quemalabs.com/tography-lite/
-Description: A beautiful and minimalistic photography WordPress theme. The perfect choice for photographers who want a simple and attractive site. If you want more features you should check the full version in http://bit.ly/tography
+Description: A beautiful and minimalistic photography WordPress theme. The perfect choice for photographers who want a simple and attractive site. If you want more features you should check the full version in http://www.quemalabs.com/theme/tography/
 Version: 1.0.2
 Author: Quema Labs
 Author URI: http://www.quemalabs.com/
