--- a/style.less
+++ b/style.less
@@ -2,12 +2,12 @@
 Theme Name: Tography Lite
 Theme URI: http://www.quemalabs.com/theme/tography-lite/
 Description: A beautiful and minimalistic photography WordPress theme. The perfect choice for photographers who want a simple and attractive site. If you want more features you should check the full version in http://www.quemalabs.com/theme/tography/
-Version: 1.0.12
+Version: 1.0.13
 Author: Quema Labs
 Author URI: http://www.quemalabs.com/
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.en.html
-Tags: featured-images, responsive-layout, two-columns, threaded-comments, custom-menu, light, right-sidebar, sticky-post, translation-ready, white, photoblogging
+Tags: featured-images, two-columns, threaded-comments, custom-menu, right-sidebar, sticky-post, translation-ready, photography, portfolio
 Text Domain: tography-lite
 */
 /*
