--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
 Theme Name: Tography Lite
 Theme URI: http://www.quemalabs.com/theme/tography-lite/
 Description: A beautiful and minimalistic photography WordPress theme. The perfect choice for photographers who want a simple and attractive site. If you want more features you should check the full version in http://www.quemalabs.com/theme/tography/
-Version: 1.0.12
+Version: 1.0.13
 Author: Quema Labs
 Author URI: http://www.quemalabs.com/
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.en.html
-Tags: featured-images, responsive-layout, two-columns, threaded-comments, custom-menu, light, right-sidebar, sticky-post, translation-ready, white, photoblogging
+Tags: featured-images, two-columns, threaded-comments, custom-menu, right-sidebar, sticky-post, translation-ready, photography, portfolio
 Text Domain: tography-lite
 */
 /*
@@ -136,7 +136,7 @@ Nav Button
   opacity: 1;
 }
 .ql_nav_btn:hover {
-  color: #ffffff;
+  color: #fff;
   background-color: #444444;
 }
 .ql_nav_btn:active {
@@ -168,7 +168,7 @@ Nav Sidebar
   color: #777777;
 }
 .nav_sidebar a:hover {
-  color: #ffffff;
+  color: #fff;
 }
 .nav_sidebar .table-wrap {
   display: table;
@@ -289,7 +289,7 @@ Nav Sidebar
   text-align: center;
   font-size: 18px;
   background-color: #444444;
-  color: #ffffff;
+  color: #fff;
   -webkit-transition: all 200ms linear;
   -o-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -298,7 +298,7 @@ Nav Sidebar
 }
 .ql_nav_close:hover {
   background-color: #444444;
-  color: #ffffff;
+  color: #fff;
 }
 /*
 Sub Nav Sidebar
@@ -363,7 +363,7 @@ Nav Menu
   -webkit-transition: all 400ms ease-in-out;
   -o-transition: all 400ms ease-in-out;
   transition: all 400ms ease-in-out;
-  color: #ffffff;
+  color: #fff;
   padding-left: 1.875rem;
   padding-right: 1.875rem;
   background-color: transparent;
@@ -397,7 +397,7 @@ Nav Menu
   font-size: 0.8125rem;
   padding: 0.5em 1.42857142857143em;
   font-weight: bold;
-  color: #ffffff;
+  color: #fff;
   background-color: transparent;
 }
 #jqueryslidemenu ul.nav > li > ul > li a:focus,
@@ -487,7 +487,7 @@ Search
   -o-transition: all 200ms ease-in-out;
   transition: all 200ms ease-in-out;
   font-size: 0;
-  color: #ffffff;
+  color: #fff;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -503,7 +503,7 @@ Search
   top: 17px;
   right: 19px;
   font-size: 14px;
-  color: #ffffff;
+  color: #fff;
   opacity: 70;
   filter: alpha(opacity=7000);
 }
@@ -600,7 +600,7 @@ WPML
 }
 #breadcrumbs a {
   font-size: 0.76923076923077em;
-  color: #ffffff;
+  color: #fff;
 }
 #breadcrumbs a:hover {
   text-decoration: underline;
@@ -804,7 +804,7 @@ WPML
 }
 .pagination a,
 .pagination span {
-  background-color: #ffffff;
+  background-color: #fff;
   border: 2px solid #eeeeee;
   color: #777777;
   float: left;
@@ -843,7 +843,7 @@ ul.fancy_tags li a {
   background-color: #444444;
   display: inline-block;
   padding: 3px 6px;
-  color: #ffffff;
+  color: #FFFFFF;
   font-weight: bold;
   border-radius: 3px;
   outline: none;
@@ -854,7 +854,7 @@ ul.fancy_tags li a {
 ul.fancy_tags li a:hover {
   color: #444444;
   text-decoration: none;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   text-indent: 0;
 }
 ul.fancy_tags li a:active {
@@ -943,7 +943,7 @@ About
   overflow: hidden;
   -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
-  border: 3px solid #ffffff;
+  border: 3px solid #fff;
   margin: 0 auto;
   -webkit-transition: all 1s ease 1000ms;
   -o-transition: all 1s ease 1000ms;
@@ -1355,7 +1355,7 @@ Tag Widget
   background-color: #c3c3c3;
   display: inline-block;
   padding: 3px 6px;
-  color: #ffffff;
+  color: #FFFFFF;
   font-weight: bold;
   border-radius: 3px;
   outline: none;
@@ -1365,7 +1365,7 @@ Tag Widget
 #sidebar .widget_tag ul li a:hover {
   color: #777777;
   text-decoration: none;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   text-indent: 0;
 }
 #sidebar .widget_tag ul li a:active {
@@ -2166,7 +2166,7 @@ Social Nav
   transform: translate(0, 0);
 }
 .portfolio_item .ql_hover h2 {
-  color: #ffffff;
+  color: #fff;
   padding: 10px 24px;
   margin: 0;
   font-size: 18px;
@@ -2274,7 +2274,7 @@ Filter
 }
 .filter_list ul {
   list-style: none;
-  color: #ffffff;
+  color: #fff;
   padding-left: 0;
   margin-left: 0;
   margin-bottom: 0;
@@ -3189,7 +3189,7 @@ a img.aligncenter {
   display: none;
 }
 .post-navigation a {
-  background-color: #ffffff;
+  background-color: #fff;
   border: 2px solid #eeeeee;
   color: #777777;
   float: left;
@@ -3257,7 +3257,7 @@ a img.aligncenter {
   clear: both;
 }
 .page-links span {
-  background-color: #ffffff;
+  background-color: #fff;
   border: 2px solid #777777;
   color: #555555;
   float: left;
@@ -3344,7 +3344,7 @@ html.menu_open body {
   padding-left: 275px;
 }
 body {
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   -webkit-transition: padding 250ms ease-in;
   -o-transition: padding 250ms ease-in;
   transition: padding 250ms ease-in;
@@ -3380,7 +3380,7 @@ iframe {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3) inset;
 }
 .preloader {
-  background: #ffffff;
+  background: #FFFFFF;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -3581,7 +3581,7 @@ Hide the icon
 .btn-ql2:hover {
   border: 2px solid #444444;
   background-color: #444444;
-  color: #ffffff;
+  color: #fff;
 }
 /* Apply the custom-colored gradients */
 /* Note: you'll need to include all the appropriate gradients for various browsers and standards. */
@@ -3593,7 +3593,7 @@ Hide the icon
 .btn-cta {
   background-color: #444444 !important;
   background-image: none;
-  color: #ffffff;
+  color: #fff;
   -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3) inset;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3) inset;
   border: none;
@@ -3602,7 +3602,7 @@ Hide the icon
   font-weight: bold;
 }
 .btn-cta:hover {
-  color: #ffffff;
+  color: #fff;
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
   opacity: 90;
   filter: alpha(opacity=9000);
@@ -3690,7 +3690,7 @@ Hide the icon
   color: #363636;
 }
 .contrast_bck {
-  background-color: #ffffff;
+  background-color: #fff;
 }
 /* Hover effect for thumbnails											*/
 /*----------------------------------------------------------------------*/
@@ -3878,7 +3878,7 @@ textarea {
   line-height: 1.625;
   color: #555555;
   vertical-align: middle;
-  background-color: #ffffff;
+  background-color: #fff;
   background-image: none;
   border: 2px solid #eeeeee;
   border-radius: 2px;
@@ -3984,6 +3984,9 @@ textarea {
   }
   .meta_blocks {
     display: none;
+  }
+  .post-categories {
+    padding-left: 0;
   }
   /*Comments Form---------------------------------------------------*/
   #respond .input-wrap {
